# linear-graph-project

./: .env  .gitignore  .python-version  Dockerfile  README.md  app.py  gunicorn_standalone.py  pyproject.toml
.github/workflows/: black.yml  git-tag.yml  manual-deployment.yml  manual-dev-deploy.yml
app/: callbacks.py  create_app.py  models.py
ci/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose-dev.yml  docker-compose-production.yml  docker-compose.yml
lgp/: README.md  app.py  callbacks.py  create_app.py  layouts.py  models.py
linear-plot-app/: README.md  app.py  callbacks.py  layouts.py
scripts/: run_app.sh
