[tool.poetry]
name = "linear-graph-project"
version = "0.1.0"
description = ""
authors = ["ldraney <draneylucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.2"
plotly = "^5.18.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
