[tool.poetry]
name = "lgp"
version = "0.1.0"
description = "showing agents the value of getting any policy in any household."
authors = ["ldraney <draneylucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.2"
plotly = "^5.18.0"
numpy = "^1.26.2"
pre-commit = "^3.6.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-check = "^2.2.0"
flake8 = "^4.0.1"  # For linting
black = "^24.3.0"  # For code formatting
mypy = "^0.971"    # For static type checking

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lgp = "lgp.app:main"
